crates/full-node/sov-metrics/src/influxdb/snapshots/sov_metrics__influxdb__config__tests__only_tcp.snap
---
source: crates/full-node/sov-metrics/src/influxdb/config.rs
expression: config
---
{
  "telegraf_address": "tcp://127.0.0.1:8094",
  "max_datagram_size": null,
  "max_pending_metrics": null,
  "tokio_runtime_metrics_interval_millis": 500,
  "rpc_aggregation": {
    "flush_interval_secs": 10,
    "slow_call_threshold_ms": 500,
    "max_slow_call_points_per_window": 10
  }
}
