crates/full-node/sov-metrics/src/influxdb/snapshots/sov_metrics__influxdb__config__tests__transport_schema.snap
---
source: crates/full-node/sov-metrics/src/influxdb/config.rs
expression: "schemars::schema_for!(Transport)"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Transport",
  "description": "Variant of transport supported by metrics sender.",
  "type": "string",
  "enum": [
    "tcp",
    "udp"
  ]
}
