crates/full-node/sov-metrics/src/influxdb/snapshots/sov_metrics__influxdb__config__tests__udp_when_not_specified.snap
---
source: crates/full-node/sov-metrics/src/influxdb/config.rs
assertion_line: 207
expression: config
---
{
  "telegraf_address": "udp://127.0.0.1:8094",
  "max_datagram_size": null,
  "max_pending_metrics": null,
  "tokio_runtime_metrics_interval_millis": 500
}
